5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1573_1332.log
== TEST (2019-03-11 15:55:22) 
-- CODE:
aresta =5.0cm
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:25) 
-- CODE:
aresta =5.0cm
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:59) 
-- CODE:
aresta =5.0cm
area = 
 
print(round(area, ))
-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:52:10) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:52:13) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.2177
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
